--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="preload" href="/BreveDisplay.otf" as="font" crossorigin="anonymous" />
+    <link
+      rel="preload"
+      href="/BreveDisplay.otf"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+      as="style"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SuperBowl Bingo</title>
-
   </head>
   <body>
     <div id="root"></div>
